stmt/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stmt
spec:
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app: stmt
  template:
    metadata:
      labels:
        app: stmt
    spec:
      containers:
        - name: stmt
          image: ghcr.io/pmh-only/stmt:latest
          volumeMounts:
            - mountPath: /data
              name: stmt-pvc
      volumes:
        - name: stmt-pvc
          persistentVolumeClaim:
            claimName: stmt-pvc
