stmt/service.yml
apiVersion: v1
kind: Service
metadata:
  name: stmt-service
spec:
  selector:
    app: stmt
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
